imolements Nullable MonthYear
