# docs/swagger.json
@@ -104,6 +104,12 @@
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
+                    "408": {
+                        "description": "Request Timeout",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
                     "409": {
                         "description": "Conflict",
                         "schema": {
@@ -263,6 +269,12 @@
                             "$ref": "#/definitions/handler.ErrorResponse"
                         }
                     },
+                    "408": {
+                        "description": "Request Timeout",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
                     "409": {
                         "description": "Conflict",
                         "schema": {
@@ -365,7 +377,8 @@
             ],
             "properties": {
                 "end_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "06-2027"
                 },
                 "price": {
                     "type": "integer",
@@ -376,7 +389,8 @@
                     "minLength": 2
                 },
                 "start_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "06-2026"
                 },
                 "user_id": {
                     "type": "string"
@@ -387,10 +401,13 @@
             "type": "object",
             "properties": {
                 "created_at": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2026-06-19T00:26:11Z"
                 },
                 "end_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "06-2027"
                 },
                 "id": {
                     "type": "integer"
@@ -402,13 +419,17 @@
                     "type": "string"
                 },
                 "start_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "06-2026"
                 },
                 "updated_at": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2026-07-19T00:26:11Z"
                 },
                 "user_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "b695926c-7d36-477b-b945-f14d05793c14"
                 }
             }
         },
@@ -445,7 +466,8 @@
             "type": "object",
             "properties": {
                 "end_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "06-2027"
                 },
                 "price": {
                     "type": "integer",
@@ -456,7 +478,8 @@
                     "minLength": 2
                 },
                 "start_date": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "06-2026"
                 }
             }
         },
